--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,14 +24,14 @@ jobs:
           pip install pyinstaller
 
       - name: Build EXE with PyInstaller
-        run: pyinstaller --onefile your_script.py  # Replace with your script's name
+        run: pyinstaller --onefile main.py  # Replace with your script's name
 
       - name: Upload EXE as GitHub Release Asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/your_script.exe  # Replace with your EXE name in the 'dist' folder
+          asset_path: ./dist/main.exe  # Replace with your EXE name in the 'dist' folder
           asset_name: your_script.exe
           asset_content_type: application/octet-stream
 
